--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         <div class="swiper books-slider">
             <div class="swiper-wrapper">
                 <a href="#" class="swiper-slide"><img src="image/book-1.png" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="image/book-2.png" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="image/book-3.png" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="image/book2.jpeg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="image/book3.jpeg" alt=""></a>
                 <a href="#" class="swiper-slide"><img src="image/book-4.png" alt=""></a>
                 <a href="#" class="swiper-slide"><img src="image/book-5.png" alt=""></a>
                 <a href="#" class="swiper-slide"><img src="image/book-6.png" alt=""></a>
