--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹1590 <span>₹3099</span></div>
+                    <div class="price">₹590 <span>₹3099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -384,7 +384,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹1590 <span>₹3099</span></div>
+                    <div class="price">₹690 <span>₹3099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -401,7 +401,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹1569 <span>₹3588</span></div>
+                    <div class="price">₹569 <span>₹3588</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -418,7 +418,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹1599 <span>₹2099</span></div>
+                    <div class="price">₹799 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -435,7 +435,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹1599 <span>₹2099</span></div>
+                    <div class="price">₹599 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -460,7 +460,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹15.99 <span>₹2099</span></div>
+                    <div class="price">₹499 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -477,7 +477,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹1599 <span>₹2099</span></div>
+                    <div class="price">₹699 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -494,7 +494,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹1599 <span>₹2099</span></div>
+                    <div class="price">₹700 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -511,7 +511,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹99 <span>₹2099</span></div>
+                    <div class="price">₹990 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -528,7 +528,7 @@
                 </div>
                 <div class="content">
                     <h3>new arrivals</h3>
-                    <div class="price">₹1599 <span>₹2099</span></div>
+                    <div class="price">₹799 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -578,7 +578,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-1.png" alt="">
-                <h3>john</h3>
+                <h3>Anjali</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -591,7 +591,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-2.png" alt="">
-                <h3>Juliyana</h3>
+                <h3>Rutwik</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -604,7 +604,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-3.png" alt="">
-                <h3>Joy</h3>
+                <h3>Sunaina</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -616,7 +616,7 @@
             </div>
             <div class="swiper-slide box">
                 <img src="image/pic-4.png" alt="">
-                <h3>Oliveya</h3>
+                <h3>Himanshi</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -629,7 +629,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-5.png" alt="">
-                <h3>William</h3>
+                <h3>Dexter</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -642,7 +642,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-6.png" alt="">
-                <h3>Ava</h3>
+                <h3>Maithili</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -771,7 +771,7 @@
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +91 8853455765 </a>
             <a href="#"> <i class="fas fa-phone"></i> +91 9140026484 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> kapilyadav001144@gmail.com </a>
+            <a href="#"> <i class="fas fa-envelope"></i> dhaigudesaily@gmail.com </a>
             <img src="image/worldmap.png" class="map" alt="">
         </div>
         
