--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                 <a href="#" class="swiper-slide"><img src="image/book-1.png" alt=""></a>
                 <a href="#" class="swiper-slide"><img src="image/book2.jpeg" alt=""></a>
                 <a href="#" class="swiper-slide"><img src="image/book3.jpeg" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="image/book-4.png" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="image/book-5.png" alt=""></a>
-                <a href="#" class="swiper-slide"><img src="image/book-6.png" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="image/book4.jpeg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="image/book5.jpg" alt=""></a>
+                <a href="#" class="swiper-slide"><img src="image/book6.jpg" alt=""></a>
             </div>
             <img src="image/stand.png" class="stand" alt="">
         </div>
@@ -189,11 +189,11 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="image/book-2.png" alt="">
+                    <img src="image/book2.jpeg" alt="">
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">₹599 <span>₹2099</span></div>
+                    <div class="price">₹699 <span>₹2099</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -205,11 +205,11 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="image/book-3.png" alt="">
+                    <img src="image/book3.jpeg" alt="">
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">₹690 <span>₹2099</span></div>
+                    <div class="price">₹799 <span>₹2099</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -221,11 +221,11 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="image/book-4.png" alt="">
+                    <img src="image/book4.jpeg" alt="">
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">₹450 <span>₹2099</span></div>
+                    <div class="price">₹499 <span>₹2099</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -237,11 +237,11 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="image/book-5.png" alt="">
+                    <img src="image/book5.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">₹590 <span>₹2099</span></div>
+                    <div class="price">₹490 <span>₹2099</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -253,11 +253,11 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="image/book-6.png" alt="">
+                    <img src="image/book6.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">700 <span>₹2099</span></div>
+                    <div class="price">690 <span>₹2099</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -269,11 +269,11 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="image/book-7.png" alt="">
+                    <img src="image/book7.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                    <div class="price">₹590 <span>₹3099</span></div>
+                    <div class="price">₹799 <span>₹3099</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -285,11 +285,11 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="image/book-8.png" alt="">
+                    <img src="image/book8.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
-                   <div class="price">₹699 <span>₹3099</span></div>
+                   <div class="price">₹590 <span>₹3099</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -301,27 +301,27 @@
                     <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="image/book-9.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>featured books</h3>
-                    <div class="price">₹750 <span>₹3099</span></div>
-                    <a href="#" class="btn">add to cart</a>
-                </div>
-            </div>
-
-            <div class="swiper-slide box">
-                <div class="icons">
-                    <a href="#" class="fas fa-search"></a>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>
-                </div>
-                <div class="image">
-                    <img src="image/book-10.png" alt="">
+                    <img src="image/book9.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>featured books</h3>
                     <div class="price">₹690 <span>₹3099</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="image/book10.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>featured books</h3>
+                    <div class="price">₹790 <span>₹3099</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -363,10 +363,10 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-1.png" alt="">
+                    <img src="image/book4.jpeg" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>The Vegetarian</h3>
                     <div class="price">₹590 <span>₹3099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -380,10 +380,10 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-2.png" alt="">
+                    <img src="image/book12.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>Pyjamas are Forgiving</h3>
                     <div class="price">₹690 <span>₹3099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -397,11 +397,11 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-3.png" alt="">
+                    <img src="image/book11.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
-                    <div class="price">₹569 <span>₹3588</span></div>
+                    <h3>Mrs. Funnybones</h3>
+                    <div class="price">₹669 <span>₹3588</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -414,11 +414,11 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-4.png" alt="">
+                    <img src="image/book-1.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
-                    <div class="price">₹799 <span>₹2099</span></div>
+                    <h3>Why Bharat Matters</h3>
+                    <div class="price">₹899 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -431,11 +431,11 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-5.png" alt="">
+                    <img src="image/book5.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
-                    <div class="price">₹599 <span>₹2099</span></div>
+                    <h3>The Alchemist</h3>
+                    <div class="price">₹499 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -456,11 +456,11 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-6.png" alt="">
+                    <img src="image/book6.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
-                    <div class="price">₹499 <span>₹2099</span></div>
+                    <h3>The palace of Illusions</h3>
+                    <div class="price">₹799 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -473,11 +473,11 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-7.png" alt="">
+                    <img src="image/book10.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
-                    <div class="price">₹699 <span>₹2099</span></div>
+                    <h3>Welcome to Paradise</h3>
+                    <div class="price">₹599 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -490,11 +490,11 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-8.png" alt="">
+                    <img src="image/book8.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
-                    <div class="price">₹700 <span>₹2099</span></div>
+                    <h3>Norwegian Wood</h3>
+                    <div class="price">₹799 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -510,8 +510,8 @@
                     <img src="image/book-9.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
-                    <div class="price">₹990 <span>₹2099</span></div>
+                    <h3>Love in the Air</h3>
+                    <div class="price">₹299 <span>₹699</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -524,11 +524,11 @@
 
             <a href="#" class="swiper-slide box">
                 <div class="image">
-                    <img src="image/book-10.png" alt="">
+                    <img src="image/book3.jpeg" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
-                    <div class="price">₹799 <span>₹2099</span></div>
+                    <h3>The Great Gatsby</h3>
+                    <div class="price">₹599 <span>₹2099</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -578,7 +578,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-1.png" alt="">
-                <h3>Anjali</h3>
+                <h3>john</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -591,7 +591,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-2.png" alt="">
-                <h3>Rutwik</h3>
+                <h3>Juliyana</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -604,7 +604,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-3.png" alt="">
-                <h3>Sunaina</h3>
+                <h3>Joy</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -616,7 +616,7 @@
             </div>
             <div class="swiper-slide box">
                 <img src="image/pic-4.png" alt="">
-                <h3>Himanshi</h3>
+                <h3>Oliveya</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -629,7 +629,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-5.png" alt="">
-                <h3>Dexter</h3>
+                <h3>William</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -642,7 +642,7 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-6.png" alt="">
-                <h3>Maithili</h3>
+                <h3>Ava</h3>
                 <p>The website is very good and responsive, all the books available in this website are original and very cheap, you can buy them comfortably. Payment can also be done easily.</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -769,8 +769,7 @@
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +91 8853455765 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +91 9140026484 </a>
+            <a href="#"> <i class="fas fa-phone"></i> +91 9876543211s </a>
             <a href="#"> <i class="fas fa-envelope"></i> dhaigudesaily@gmail.com </a>
             <img src="image/worldmap.png" class="map" alt="">
         </div>
